--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,7 @@ language: generic
 matrix:
   include:
      - { os: linux, env: PYTHON_VERSION=2.7 }
-     - { os: linux, env: PYTHON_VERSION=3.5 }
+    # - { os: linux, env: PYTHON_VERSION=3.5 }
     # - { os: osx, env: PYTHON_VERSION=3.5 }
 
 sudo: false
