--- a/.travis.yml
+++ b/.travis.yml
@@ -9,7 +9,7 @@ matrix:
 sudo: false
 
 before_install:
-    - source devtools/travis-ci/set_env.py
+    - source devtools/travis-ci/set_env.sh
 
 install:
     - pip install . -e
