--- a/.travis.yml
+++ b/.travis.yml
@@ -12,7 +12,7 @@ before_install:
     - source devtools/travis-ci/setup_env.sh
 
 install:
-    - pip install . -e
+    - pip install -e .
 
 script:
     - nosetests -v --with-coverage --cover-package=nglview nglview
