--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,7 @@ language: generic
 matrix:
   include:
      - { os: linux, env: PYTHON_VERSION=2.7 }
-    # - { os: linux, env: PYTHON_VERSION=3.5 }
+     - { os: linux, env: PYTHON_VERSION=3.5 }
     # - { os: osx, env: PYTHON_VERSION=3.5 }
 
 sudo: false
@@ -12,10 +12,10 @@ before_install:
     - source devtools/travis-ci/setup_env.sh
 
 install:
-    - pip install -e .
+    - python setup.py install
 
-script:
-    - nosetests -v --with-coverage --cover-package=nglview nglview
+#script:
+#    - nosetests -v --with-coverage --cover-package=nglview nglview
 
 after_success:
     - echo "after_success"
