[setup|package] added versioneer to extract version numbers from git tags and use them as __version__ attr in pkg

--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -2,4 +2,5 @@ include nglview/datafiles/*
 include nglview/html/static/*
 include LICENSE README.md
 include setup.py
-global-exclude *.pyc
+global-exclude *.pycinclude versioneer.py
+include nglview/_version.py
