--- a/.travis.yml
+++ b/.travis.yml
@@ -5,14 +5,19 @@ matrix:
      - { os: linux, env: PYTHON_VERSION=2.7 }
      - { os: linux, env: PYTHON_VERSION=3.4 }
      - { os: linux, env: PYTHON_VERSION=3.5 }
-     # - { os: osx, env: PYTHON_VERSION=3.5 }
+     - { os: osx, env: PYTHON_VERSION=3.5 }
 
 sudo: false
 
 before_install:
-    - source devtools/travis-ci/setup_env.sh
+  - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then
+      brew tap homebrew/science;
+      brew update;
+      brew install netcdf fftw;
+    fi
 
 install:
+    - source devtools/travis-ci/setup_env.sh
     - python setup.py install
 
 script:
