--- a/doc/Makefile
+++ b/doc/Makefile
@@ -53,7 +53,7 @@ clean:
 
 .PHONY: html
 html:
-	$(SPHINXBUILD) -b html $(ALLSPHINXOPTS) $(BUILDDIR)/html
+	$(SPHINXBUILD) -b html $(ALLSPHINXOPTS) ../latest
 	@echo
 	@echo "Build finished. The HTML pages are in $(BUILDDIR)/html."
 
