--- a/.travis.yml
+++ b/.travis.yml
@@ -25,6 +25,7 @@ install:
     - python setup.py install
 
 before_script:
+    - export CHROME_BIN=chromium-browser
     - export DISPLAY=:99.0
     - sh -e /etc/init.d/xvfb start
     - sleep 3
@@ -32,7 +33,9 @@ before_script:
     - sleep 3
 
 script:
-    - nightwatch
+    - if [[ "$PYTHON_VERSION" == "3.5" ]]; then
+        nightwatch
+      fi
     - (cd nglview/tests && nosetests --with-coverage --cover-package nglview -vs .)
 
 after_success:
