--- a/.travis.yml
+++ b/.travis.yml
@@ -43,7 +43,7 @@ before_script:
 
 script:
     - if [[ "$PYTHON_VERSION" == "3.5" ]]; then
-        echo "turn off nightwatch for now"
+        echo "turn off nightwatch for now";
         # nightwatch;
       fi
     - (cd nglview/tests && nosetests --with-coverage --cover-package nglview -vs .)
