--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,6 +1,6 @@
 include nglview/datafiles/*
 include nglview/js/*
-include LICENSE README.md DEVELOPMENT.md
+include LICENSE README.md DEVELOPMENT.md CHANGELOG.md
 include setup.py
-global-exclude *.pycinclude versioneer.py
 include nglview/_version.py
+global-exclude *.pycinclude versioneer.py *.ipynb *.gif *tests/notebooks/*
