--- a/.travis.yml
+++ b/.travis.yml
@@ -32,7 +32,7 @@ install:
     - source devtools/travis-ci/clone_nbtest.sh
     - ls
     - python setup.py sdist
-    - python -m pip install dist/*gz
+    - pip install dist/*gz
 
 before_script:
     - export CHROME_BIN=chromium-browser
