use pip to install gz (#248)
* use pip to install gz

python setup.py sdist
python -m pip install dist/*gz

* add versioneer

* fix

--- a/.travis.yml
+++ b/.travis.yml
@@ -31,7 +31,8 @@ install:
     - source devtools/travis-ci/setup_env.sh
     - source devtools/travis-ci/clone_nbtest.sh
     - ls
-    - python setup.py install
+    - python setup.py sdist
+    - pip install dist/*gz
 
 before_script:
     - export CHROME_BIN=chromium-browser
