--- a/.travis.yml
+++ b/.travis.yml
@@ -17,10 +17,6 @@ addons:
     - google-chrome-stable
 
 before_install:
-  - wget http://chromedriver.storage.googleapis.com/2.21/chromedriver_linux64.zip
-  - unzip chromedriver_linux64.zip
-  - sudo chmod u+x chromedriver
-  - sudo mv chromedriver /usr/bin/
   - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then
       brew tap homebrew/science;
       brew update;
@@ -29,13 +25,12 @@ before_install:
 
 install:
     - npm install -g nightwatch
+    - source devtools/travis-ci/install_chrome.sh
     - source devtools/travis-ci/setup_env.sh
     - source devtools/travis-ci/clone_nbtest.sh
     - source devtools/travis-ci/install_nglview.sh
 
 before_script:
-    - export CHROME_BIN=chromium-browser
-    - export DISPLAY=:99.0
     - sh -e /etc/init.d/xvfb start
     - sleep 3
     - jupyter notebook --port=8889 &
@@ -43,7 +38,7 @@ before_script:
 
 script:
     - if [[ "$PYTHON_VERSION" == "3.5" ]]; then
-         echo "turn off nightwatch for now";
+         nightwatch
       fi
     - (cd nglview/tests && nosetests --with-coverage --cover-package nglview -vs .)
 
