--- a/.travis.yml
+++ b/.travis.yml
@@ -1,55 +1,48 @@
-language: generic
+language: cpp
 
 matrix:
   include:
      - { os: linux, env: PYTHON_VERSION=2.7 }
      - { os: linux, env: PYTHON_VERSION=3.4 }
      - { os: linux, env: PYTHON_VERSION=3.5 }
-     - { os: linux, env: PYTHON_VERSION=3.5 CONDA=yes}
-     # - { os: osx, env: PYTHON_VERSION=3.5 }
+     - { os: linux, env: PYTHON_VERSION=3.5 CONDA=yes} # do not change 3.5
+     - { os: linux, env: PYTHON_VERSION=3.5 TEST_NOTEBOOK=yes}
 
 sudo: true
-
+dist: trusty
 
 addons:
-  packages:
+  apt:
+    sources:
+    # add PPAs with more up-to-date toolchains
+    - ubuntu-toolchain-r-test
+    packages:
+    # install toolchains
+    - gcc-5
+    - g++-5
+    - clang-3.6
     - unzip
-    - google-chrome-stable
+    # - google-chrome-stable
 
 before_install:
-  - wget http://chromedriver.storage.googleapis.com/2.21/chromedriver_linux64.zip
-  - unzip chromedriver_linux64.zip
-  - sudo chmod u+x chromedriver
-  - sudo mv chromedriver /usr/bin/
-  - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then
-      brew tap homebrew/science;
-      brew update;
-      brew install netcdf fftw;
-    fi
+    - source devtools/travis-ci/install_chrome.sh
+    - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then
+        brew tap homebrew/science;
+        brew update;
+        brew install netcdf fftw;
+      fi
 
 install:
-    - npm install -g nightwatch
     - source devtools/travis-ci/setup_env.sh
     - source devtools/travis-ci/clone_nbtest.sh
     - source devtools/travis-ci/install_nglview.sh
-
-before_script:
-    - export CHROME_BIN=chromium-browser
-    - export DISPLAY=:99.0
-    - sh -e /etc/init.d/xvfb start
-    - sleep 3
-    - jupyter notebook --port=8889 &
-    - sleep 3
+    - python devtools/make_test_js.py --basic
 
 script:
-    - if [[ "$PYTHON_VERSION" == "3.5" ]]; then
-         echo "turn off nightwatch for now";
-      fi
-    - (cd nglview/tests && nosetests --with-coverage --cover-package nglview -vs .)
+    - source devtools/travis-ci/run_tests.sh
 
 after_success:
-    - echo "after_success"
-    # - coveralls
+    - echo "Congrats"
 
 notifications:
   email: false
