--- a/.travis.yml
+++ b/.travis.yml
@@ -2,10 +2,10 @@ language: cpp
 
 matrix:
   include:
-     - { os: linux, env: PYTHON_VERSION=2.7 }
-     - { os: linux, env: PYTHON_VERSION=3.4 }
-     - { os: linux, env: PYTHON_VERSION=3.5 }
-     - { os: linux, env: PYTHON_VERSION=3.5 CONDA=yes} # do not change 3.5
+     # - { os: linux, env: PYTHON_VERSION=2.7 }
+     # - { os: linux, env: PYTHON_VERSION=3.4 }
+     # - { os: linux, env: PYTHON_VERSION=3.5 }
+     # - { os: linux, env: PYTHON_VERSION=3.5 CONDA=yes} # do not change 3.5
      - { os: linux, env: PYTHON_VERSION=3.5 TEST_NOTEBOOK=yes}
 
 sudo: true
@@ -36,7 +36,7 @@ install:
     - source devtools/travis-ci/setup_env.sh
     - source devtools/travis-ci/clone_nbtest.sh
     - source devtools/travis-ci/install_nglview.sh
-    - python devtools/make_test_js.py --basic
+    - python devtools/make_test_js.py --api
 
 script:
     - source devtools/travis-ci/run_tests.sh
