--- a/js/package.json
+++ b/js/package.json
@@ -3,6 +3,7 @@
   "version": "0.5.2",
   "description": "nglview",
   "author": "Alexander S. Rose",
+  "license": "MIT",
   "main": "src/index.js",
   "repository": {
     "type": "git",
