add more test (#472)
* add more test

* try coveralls

* oops

--- a/.travis.yml
+++ b/.travis.yml
@@ -40,6 +40,7 @@ script:
 
 after_success:
     - echo "Congrats"
+    - (cd nglview/tests && ../../devtools/travis-ci/coveralls)
 
 notifications:
   email: false
