--- a/nglview/tests/.coveragerc
+++ b/nglview/tests/.coveragerc
@@ -15,6 +15,9 @@ exclude_lines =
     # Don't complain if non-runnable code isn't run:
     if 0:
     if __name__ == .__main__.:
+    from urllib2 import urlopen 
+    except ImportError
+    except Exception as e: 
 
 omit = 
     
