--- a/js/package.json
+++ b/js/package.json
@@ -21,7 +21,8 @@
   },
   "devDependencies": {
     "json-loader": "^0.5.4",
-    "webpack": "^1.12.14"
+    "webpack": "^1.12.14",
+    "ngl": "0.10.0-dev.3"
   },
   "dependencies": {
     "jupyter-js-widgets": "^1.1.1",
