--- a/js/package.json
+++ b/js/package.json
@@ -23,11 +23,11 @@
     "json-loader": "^0.5.4",
     "webpack": "^1.12.14",
     "@jupyterlab/extension-builder": "^0.8.1",
-    "ngl": "0.10.0-dev.3",
-    "jquery": "^1.12.1"
+    "ngl": "0.10.0-dev.3"
 
   },
   "dependencies": {
+    "jquery": "^2.1.4",
     "jupyter-js-widgets": "^2.0.6",
     "@jupyterlab/nbwidgets": "^0.6.0",
     "underscore": "^1.8.3"
