--- a/js/package.json
+++ b/js/package.json
@@ -1,6 +1,6 @@
 {
   "name": "nglview-js-widgets",
-  "version": "0.5.4",
+  "version": "0.5.4-dev.1",
   "description": "nglview-js-widgets",
   "author": "Alexander S. Rose",
   "license": "MIT",
