--- a/setup.cfg
+++ b/setup.cfg
@@ -8,7 +8,7 @@ description-file = README.md
 VCS = git
 style = pep440
 versionfile_source = nglview/_version.py
-#versionfile_build =
+versionfile_build = nglview/_version.py
 tag_prefix = v
 #parentdir_prefix =
 
