--- a/js/package.json
+++ b/js/package.json
@@ -16,15 +16,18 @@
     "ipywidgets"
   ],
   "scripts": {
+    "lint": "eslint src",
     "prepublish": "webpack",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "devDependencies": {
-    "json-loader": "^0.5.4",
-    "webpack": "^1.12.14",
     "@jupyterlab/extension-builder": "^0.8.1",
-    "ngl": "0.10.0-dev.3"
-
+    "babel-eslint": "^7.0.0",
+    "eslint": "^3.2.2",
+    "eslint-config-google": "^0.7.1",
+    "json-loader": "^0.5.4",
+    "ngl": "0.10.0-dev.3",
+    "webpack": "^1.12.14"
   },
   "dependencies": {
     "jquery": "^2.1.4",
