--- a/js/package.json
+++ b/js/package.json
@@ -36,7 +36,7 @@
     "eslint": "^3.2.2",
     "eslint-config-google": "^0.7.1",
     "json-loader": "^0.5.4",
-    "ngl": "0.10.0-dev.24",
+    "ngl": "0.10.1",
     "webpack": "^1.12.14"
   },
   "dependencies": {
