--- a/js/package.json
+++ b/js/package.json
@@ -43,7 +43,7 @@
     "jquery": "^2.1.4",
     "jquery-ui": "^1.12.1",
     "underscore": "^1.8.3",
-    "jupyter-js-widgets": "3.0.0-alpha.6",
+    "@jupyter-widgets/base": "^0.5.2",
     "@jupyterlab/nbwidgets": "^0.6.15"
   }
 }
