--- a/jslab/package.json
+++ b/jslab/package.json
@@ -1,23 +1,23 @@
 {
-  "name": "bqplot-jupyterlab",
-  "version": "0.4.0",
-  "description": "A JupyterLab extension exposing bqplot",
+  "name": "nglview-jupyterlab",
+  "version": "0.0.1",
+  "description": "A JupyterLab extension exposing nglview",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/bloomberg/bqplot.git"
+    "url": "https://github.com/arose/nglview.git"
   },
   "author": {
-    "name": "BQPlot Development team",
-    "email": "bqplot@bloomberg.net"
+    "name": "NGLview Development team",
+    "email": "hainm.comp@gmail.com"
   },
-  "license": "Apache-2.0",
+  "license": "MIT",
   "dependencies": {
     "@jupyter-widgets/jupyterlab-manager": "^0.24.0",
-    "bqplot": "0.3.0-alpha.3"
+    "nglview-js-widgets": "0.5.4-dev.4"
   },
   "jupyterlab": {
     "extension": true
