--- a/js/package.json
+++ b/js/package.json
@@ -1,6 +1,6 @@
 {
   "name": "nglview-js-widgets",
-  "version": "0.5.4-dev.2",
+  "version": "0.5.4-dev.4",
   "description": "nglview-js-widgets",
   "author": "Hai Nguyen <hainm.comp@gmail.com>, Alexander Rose <alexander.rose@weirdbyte.de>",
   "license": "MIT",
@@ -43,7 +43,7 @@
     "jquery": "^2.1.4",
     "jquery-ui": "^1.12.1",
     "underscore": "^1.8.3",
-    "jupyter-js-widgets": "3.0.0-alpha.6",
+    "@jupyter-widgets/base": "^0.5.2",
     "@jupyterlab/nbwidgets": "^0.6.15"
   }
 }
