--- a/js/package.json
+++ b/js/package.json
@@ -7,7 +7,7 @@
   "main": "src/index.js",
   "repository": {
     "type": "git",
-    "url": "https://github.com/arose/nglview.git"
+    "url": "git+https://github.com/arose/nglview.git"
   },
   "bugs": {
     "url": "https://github.com/arose/nglview/issues"
@@ -45,5 +45,9 @@
     "underscore": "^1.8.3",
     "@jupyter-widgets/base": "^0.5.2",
     "@jupyterlab/nbwidgets": "^0.6.15"
+  },
+  "homepage": "https://github.com/arose/nglview#readme",
+  "directories": {
+    "test": "test"
   }
 }
