--- a/circle.yml
+++ b/circle.yml
@@ -4,7 +4,7 @@ machine:
 
 dependencies:
   override:
-    - docker pull continuumio/miniconda
+    - docker pull continuumio/miniconda3
 
 test:
   override:
