--- a/js/package.json
+++ b/js/package.json
@@ -1,6 +1,6 @@
 {
   "name": "nglview-js-widgets",
-  "version": "0.5.4-dev.13",
+  "version": "0.5.4-dev.15",
   "description": "nglview-js-widgets",
   "author": "Hai Nguyen <hainm.comp@gmail.com>, Alexander Rose <alexander.rose@weirdbyte.de>",
   "license": "MIT",
@@ -30,22 +30,23 @@
     "test": "mocha"
   },
   "devDependencies": {
-    "@jupyterlab/extension-builder": "^0.10.0",
     "babel-eslint": "^7.0.0",
     "babel-register": "^6.11.6",
     "eslint": "^3.2.2",
     "eslint-config-google": "^0.7.1",
     "json-loader": "^0.5.4",
-    "ngl": "0.10.5-17",
+    "css-loader": "^0.23.1",
+    "style-loader": "^0.13.1",
+    "ngl": "0.10.5-19",
     "webpack": "^1.12.14"
   },
   "dependencies": {
-    "jquery": "^2.1.4",
+    "jquery": "^3.2.1",
     "jquery-ui": "^1.12.1",
     "underscore": "^1.8.3",
     "@jupyter-widgets/base": "^0.5.2",
     "@jupyterlab/nbwidgets": "^0.6.15",
-    "ngl": "0.10.5-17"
+    "ngl": "0.10.5-19"
   },
   "homepage": "https://github.com/arose/nglview#readme",
   "directories": {
