--- a/js/package.json
+++ b/js/package.json
@@ -37,7 +37,7 @@
     "eslint-config-google": "^0.7.1",
     "file-loader": "^0.8.5",
     "json-loader": "^0.5.4",
-    "ngl": "^1.0.0-beta.7",
+    "ngl": "^2.0.0-dev.9",
     "style-loader": "^0.13.1",
     "webpack": "^1.12.14"
   },
