--- a/js/package.json
+++ b/js/package.json
@@ -1,6 +1,6 @@
 {
   "name": "nglview-js-widgets",
-  "version": "0.5.4-dev.31",
+  "version": "1.1.0",
   "description": "nglview-js-widgets",
   "author": "Hai Nguyen <hainm.comp@gmail.com>, Alexander Rose <alexander.rose@weirdbyte.de>",
   "license": "MIT",
@@ -37,7 +37,7 @@
     "eslint-config-google": "^0.7.1",
     "file-loader": "^0.8.5",
     "json-loader": "^0.5.4",
-    "ngl": "^2.0.0-dev.26",
+    "ngl": "^2.0.0-dev.28",
     "style-loader": "^0.13.1",
     "webpack": "^1.12.14"
   },
@@ -45,8 +45,7 @@
     "jquery": "^3.2.1",
     "jquery-ui": "^1.12.1",
     "underscore": "^1.8.3",
-    "@jupyter-widgets/base": "^0.5.2",
-    "@jupyterlab/nbwidgets": "^0.6.15"
+    "@jupyter-widgets/base": "^0.5.2"
   },
   "homepage": "https://github.com/arose/nglview#readme",
   "directories": {
