--- a/jslab/package.json
+++ b/jslab/package.json
@@ -1,6 +1,6 @@
 {
   "name": "nglview-jupyterlab",
-  "version": "0.0.1",
+  "version": "1.1.0",
   "description": "A JupyterLab extension exposing nglview",
   "main": "index.js",
   "scripts": {
@@ -16,8 +16,8 @@
   },
   "license": "MIT",
   "dependencies": {
-    "@jupyter-widgets/jupyterlab-manager": "^0.27.0",
-    "nglview-js-widgets": "0.5.4-dev.31"
+    "@jupyter-widgets/jupyterlab-manager": "^0.31",
+    "nglview-js-widgets": "1.1.0"
   },
   "jupyterlab": {
     "extension": true
