--- a/js/package.json
+++ b/js/package.json
@@ -46,6 +46,7 @@
     "jquery": "^3.2.1",
     "jquery-ui": "^1.12.1",
     "underscore": "^1.8.3",
+    "ngl": "^2.0.0-dev.33",
     "@jupyter-widgets/base": "^1.0.0"
   },
   "jupyterlab": {
