work with jupyterlab 1.0.x

--- a/js/package.json
+++ b/js/package.json
@@ -47,6 +47,7 @@
     "jquery-ui": "^1.12.1",
     "underscore": "^1.8.3",
     "ngl": "2.0.0-dev.36",
+    "@jupyter-widgets/controls": "^1.5.0",
     "@jupyter-widgets/base": "^1.1 || ^2"
   },
   "jupyterlab": {
