--- a/binder/environment.yml
+++ b/binder/environment.yml
@@ -1,15 +1,14 @@
 channels:
 - conda-forge
 dependencies:
-- jupyterlab
-- python
+- jupyterlab=1.0.4
+- python=3.7
 - nodejs
 - ipython
-- ipywidgets 
+- ipywidgets=7.5.1
 - notebook
 - ipykernel
-- nglview=2.5.2
+- nglview=2.6.1
 - pip:
     - pytraj
-    - sidecar
     - ipython_blocking
