NOTEBOOK: add rdkit_smiles_3d.ipynb

--- a/binder/environment.yml
+++ b/binder/environment.yml
@@ -8,7 +8,8 @@ dependencies:
 - ipywidgets=7.5.1
 - notebook
 - ipykernel
-- nglview=2.6.1
+- nglview=2.7
+- rdkit::rdkit
 - pip:
     - pytraj
     - ipython_blocking
