--- a/js/package.json
+++ b/js/package.json
@@ -30,7 +30,17 @@
     "lint": "eslint src test",
     "prepublish": "tsc && webpack",
     "ts": "tsc",
-    "test": "mocha"
+    "test": "mocha",
+    "build": "yarn run build:lib",
+    "build:labextension": "cd jupyter_archive && rimraf labextension && mkdirp labextension && cd labextension && npm pack ../..",
+    "build:lib": "tsc",
+    "build:all": "yarn run build:labextension",
+    "clean": "yarn run clean:lib",
+    "clean:lib": "rimraf lib && rimraf tsconfig.tsbuildinfo",
+    "clean:labextension": "rimraf jupyter_archive/labextension",
+    "clean:all": "yarn run clean:lib && yarn run clean:labextension",
+    "prepare": "yarn run clean && yarn run build",
+    "watch": "tsc -w"
   },
   "devDependencies": {
     "@types/node": "^12.0.2",
@@ -55,10 +65,10 @@
     "jquery-ui": "^1.12.1",
     "underscore": "^1.8.3",
     "ngl": "2.0.0-dev.36",
-    "@jupyter-widgets/base": "^1.1 || ^2"
+    "@jupyter-widgets/base": "^1.1 || ^2 || ^3"
   },
   "jupyterlab": {
-    "extension": "lib/jupyterlab-plugin"
+    "extension": true
   },
   "homepage": "https://github.com/arose/nglview#readme",
   "directories": {
