--- a/js/package.json
+++ b/js/package.json
@@ -31,15 +31,11 @@
     "prepublish": "tsc && webpack",
     "ts": "tsc",
     "test": "mocha",
+    "clean": "rimraf dist/",
     "build": "yarn run build:lib",
     "build:labextension": "cd jupyter_archive && rimraf labextension && mkdirp labextension && cd labextension && npm pack ../..",
     "build:lib": "tsc",
     "build:all": "yarn run build:labextension",
-    "clean": "yarn run clean:lib",
-    "clean:lib": "rimraf lib && rimraf tsconfig.tsbuildinfo",
-    "clean:labextension": "rimraf jupyter_archive/labextension",
-    "clean:all": "yarn run clean:lib && yarn run clean:labextension",
-    "prepare": "yarn run clean && yarn run build",
     "watch": "tsc -w"
   },
   "devDependencies": {
@@ -58,13 +54,15 @@
     "json-loader": "^0.5.4",
     "ngl": "2.0.0-dev.36",
     "style-loader": "^0.13.1",
-    "webpack": "^1.12.14"
+    "webpack": "^3.5.5",
+    "rimraf": "^2.6.1"
   },
   "dependencies": {
     "jquery": "^3.2.1",
     "jquery-ui": "^1.12.1",
     "underscore": "^1.8.3",
     "ngl": "2.0.0-dev.36",
+    "lodash": "^4.17.4",
     "@jupyter-widgets/base": "^1.1 || ^2 || ^3"
   },
   "jupyterlab": {
