--- a/js/tsconfig.json
+++ b/js/tsconfig.json
@@ -8,16 +8,15 @@
     "jsx": "react",
     "module": "esnext",
     "moduleResolution": "node",
-    "noEmitOnError": false,
-    "noImplicitAny": false,
+    "noEmitOnError": true,
+    "noImplicitAny": true,
     "noUnusedLocals": true,
+    "outDir": "lib",
     "preserveWatchOutput": true,
     "resolveJsonModule": true,
-    "outDir": "lib",
     "rootDir": "src",
-    "skipLibCheck": true,
-    "strict": false,
-    "strictNullChecks": true,
+    "strict": true,
+    "strictNullChecks": false,
     "target": "es2017",
     "types": [
       "node"
