--- a/.github/workflows/build-extension.yml
+++ b/.github/workflows/build-extension.yml
@@ -1,4 +1,4 @@
-name: Build
+name: Build extension
 
 on:
   push:
@@ -9,9 +9,6 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
-    defaults:
-      run:
-        working-directory: $GITHUB_WORKSPACE/js
     steps:
     - name: Checkout
       uses: actions/checkout@v2
@@ -50,6 +47,7 @@ jobs:
     - name: Install dependencies
       run: python -m pip install -U jupyterlab~=3.0 jupyter_packaging~=0.7.9
     - name: Build the extension
+      working-directory: $GITHUB_WORKSPACE/js
       run: |
         jlpm
         jlpm run eslint:check
