--- a/js/package.json
+++ b/js/package.json
@@ -2,62 +2,70 @@
   "name": "nglview-js-widgets",
   "version": "2.7.7",
   "description": "nglview-js-widgets",
+  "keywords": [
+    "ipython",
+    "ipywidgets",
+    "jupyter",
+    "jupyterlab",
+    "jupyterlab-extension",
+    "molecular graphics",
+    "molecular structure",
+    "science",
+    "widgets"
+  ],
+  "homepage": "https://github.com/nglviewer/nglview/js",
+  "bugs": {
+    "url": "https://github.com/nglviewer/nglview/issues"
+  },
+  "license": "MIT",
   "author": {
-    "name": "Hay Nguyen",
-    "email": "<hainm.comp@gmail.com>"
+    "name": "Alexander Rose",
+    "email": "alexander.rose@weirdbyte.de"
   },
   "contributors": [
     {
-      "name": "Alexander Rose",
-      "email": "alexander.rose@weirdbyte.de"
+      "name": "Hay Nguyen",
+      "email": "<hainm.comp@gmail.com>"
     }
   ],
-  "license": "MIT",
+  "files": [
+    "lib/**/*.{d.ts,eot,gif,html,jpg,js,js.map,json,png,svg,woff2,ttf}",
+    "style/**/*.{css,.js,eot,gif,html,jpg,json,png,svg,woff2,ttf}"
+  ],
   "main": "lib/index.js",
+  "types": "lib/index.d.ts",
+  "style": "style/index.css",
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/arose/nglview.git"
+    "url": "https://github.com/nglviewer/nglview.git"
   },
-  "bugs": {
-    "url": "https://github.com/arose/nglview/issues"
-  },
-  "files": [
-    "dist",
-    "src",
-    "lib",
-    "style/index.js"
-  ],
-  "keywords": [
-    "molecular graphics",
-    "molecular structure",
-    "jupyter",
-    "widgets",
-    "ipython",
-    "ipywidgets",
-    "science"
-  ],
   "scripts": {
     "build": "jlpm run build:lib && jlpm run build:labextension:dev",
-    "build:all": "yarn run build:labextension",
+    "build:prod": "jlpm run build:lib && jlpm run build:labextension",
     "build:labextension": "jupyter labextension build .",
     "build:labextension:dev": "jupyter labextension build --development True .",
     "build:lib": "tsc",
-    "build:prod": "jlpm run build:lib && jlpm run build:labextension",
     "clean": "jlpm run clean:lib",
-    "clean:all": "jlpm run clean:lib && jlpm run clean:labextension",
-    "clean:labextension": "rimraf nglview-js-widgets/labextension",
     "clean:lib": "rimraf lib tsconfig.tsbuildinfo",
+    "clean:labextension": "rimraf myextension/labextension",
+    "clean:all": "jlpm run clean:lib && jlpm run clean:labextension",
     "eslint": "eslint . --ext .ts,.tsx --fix",
     "eslint:check": "eslint . --ext .ts,.tsx",
     "install:extension": "jupyter labextension develop --overwrite .",
-    "lint": "eslint src test",
     "prepare": "jlpm run clean && jlpm run build:prod",
-    "prepublish": "tsc && webpack",
-    "test": "mocha",
-    "ts": "tsc",
     "watch": "run-p watch:src watch:labextension",
+    "watch:src": "tsc -w",
     "watch:labextension": "jupyter labextension watch .",
-    "watch:src": "tsc -w"
+    "test": "mocha"
+  },
+  "dependencies": {
+    "@jupyter-widgets/base": "^1.1 || ^2 || ^3",
+    "@jupyterlab/application": "^3.0.0",
+    "jquery": "^3.2.1",
+    "jquery-ui": "^1.12.1",
+    "lodash": "^4.17.4",
+    "ngl": "2.0.0-dev.37",
+    "underscore": "^1.8.3"
   },
   "devDependencies": {
     "@jupyterlab/builder": "^3.0.0",
@@ -68,7 +76,6 @@
     "@types/requirejs": "^2.1.31",
     "@typescript-eslint/eslint-plugin": "^4.8.1",
     "@typescript-eslint/parser": "^4.8.1",
-    "babel-eslint": "^7.0.0",
     "babel-register": "^6.11.6",
     "css-loader": "^0.23.1",
     "eslint": "^7.14.0",
@@ -77,30 +84,23 @@
     "eslint-plugin-prettier": "^3.1.4",
     "file-loader": "^0.8.5",
     "json-loader": "^0.5.4",
-    "ngl": "2.0.0-dev.36",
+    "ngl": "2.0.0-dev.37",
     "npm-run-all": "^4.1.5",
     "prettier": "^2.1.1",
     "rimraf": "^3.0.2",
     "style-loader": "^0.13.1",
-    "typescript": "~4.1.3",
-    "webpack": "^3.5.5"
+    "typescript": "~4.1.3"
   },
-  "dependencies": {
-    "@jupyter-widgets/base": "^1.1 || ^2 || ^3",
-    "@jupyterlab/application": "^3.0.6",
-    "jquery": "^3.2.1",
-    "jquery-ui": "^1.12.1",
-    "lodash": "^4.17.4",
-    "ngl": "2.0.0-dev.36",
-    "underscore": "^1.8.3"
-  },
+  "sideEffects": [
+    "style/*.css",
+    "style/index.js"
+  ],
+  "styleModule": "style/index.js",
   "jupyterlab": {
-    "extension": "lib/jupyterlab-plugin",
+    "extension": true,
     "outputDir": "nglview-js-widgets/labextension"
   },
-  "homepage": "https://github.com/arose/nglview#readme",
   "directories": {
     "test": "test"
-  },
-  "styleModule": "style/index.js"
+  }
 }
